The build rules have been changed.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,6 +6,9 @@ on:
       - main
     tags:
       - "*"
+    paths:
+      - 'src/**'
+      - '.github/workflows/**'
   workflow_dispatch:
 
 permissions:
