--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,27 +4,45 @@ stages:
 nexus:
   stage: build
   image: data61/magda-builder-docker:latest
-  when: manual
   services:
     - docker:dind
+  rules:
+    - changes:
+        - src/**
+        - .gitlab-ci.yml
+      when: on_success
   script:
     - cd src/
-    - docker login -u $NEXUS_USER -p $NEXUS_PASS $NEXUS_REGISTRY
+    - docker login -u "$NEXUS_USER" -p "$NEXUS_PASS" "$NEXUS_REGISTRY"
     - docker context create builder-context
     - docker buildx create --name builderx --driver docker-container --use builder-context
-    - docker buildx build -t $NEXUS_REGISTRY/$CI_PROJECT_PATH:latest -f Dockerfile --push --platform=linux/arm64,linux/amd64 .
+    - |
+      SHORT_SHA=$(echo "$CI_COMMIT_SHA" | cut -c1-7)
+      docker buildx build \
+        --platform=linux/arm64,linux/amd64 \
+        --push \
+        -f Dockerfile \
+        -t "$NEXUS_REGISTRY/$CI_PROJECT_PATH:sha-$SHORT_SHA" \
+        .
 
 docker-hub:
   stage: build
   image: data61/magda-builder-docker:latest
-  rules:
-    - if: $CI_COMMIT_TAG
-      when: manual
   services:
     - docker:dind
+  rules:
+    - if: '$CI_COMMIT_TAG'
+      when: on_success
+    - when: never
   script:
     - cd src/
-    - docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+    - docker login -u "$DOCKER_USER" -p "$DOCKER_TOKEN"
     - docker context create builder-context
     - docker buildx create --name builderx --driver docker-container --use builder-context
-    - docker buildx build -t $CI_PROJECT_PATH:latest -t $CI_PROJECT_PATH:$CI_COMMIT_TAG -f Dockerfile --push --platform=linux/arm64,linux/amd64 .
+    - docker buildx build \
+        --platform=linux/arm64,linux/amd64 \
+        --push \
+        -f Dockerfile \
+        -t "$CI_PROJECT_PATH:latest" \
+        -t "$CI_PROJECT_PATH:$CI_COMMIT_TAG" \
+        .
